--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -7,6 +7,8 @@ encoding//admin/XiaoShouGuanLi/XiaoShouDan/kehu.php=UTF-8
 encoding//admin/XiaoShouGuanLi/XiaoShouDan/modifyPro.php=UTF-8
 encoding//admin/XiaoShouGuanLi/XiaoShouDan/pro.php=UTF-8
 encoding//admin/XiaoShouGuanLi/XiaoShouDan/showOrder.php=UTF-8
+encoding//includes/access.inc.php=UTF-8
 encoding//includes/head.html=UTF-8
 encoding//includes/login.php=UTF-8
+encoding//includes/yanzheng.php=UTF-8
 encoding/index.php=UTF-8
