修复登录校验bug

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
+encoding//admin/KeHuGuanLi/huifang.php=UTF-8
 encoding//admin/XiaoShouGuanLi/XiaoShouDan/XiaDan.php=UTF-8
 encoding//admin/XiaoShouGuanLi/XiaoShouDan/addPro.php=UTF-8
 encoding//admin/XiaoShouGuanLi/XiaoShouDan/deletePro.php=UTF-8
