添加客户回访页面

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -9,6 +9,15 @@ encoding//admin/XiaoShouGuanLi/XiaoShouDan/modifyPro.php=UTF-8
 encoding//admin/XiaoShouGuanLi/XiaoShouDan/pro.php=UTF-8
 encoding//admin/XiaoShouGuanLi/XiaoShouDan/showOrder.php=UTF-8
 encoding//includes/access.inc.php=UTF-8
+encoding//includes/error.php=UTF-8
+encoding//includes/get_city.php=UTF-8
+encoding//includes/get_huifang.php=UTF-8
+encoding//includes/get_kehuname.php=UTF-8
+encoding//includes/get_province.php=UTF-8
+encoding//includes/get_scname.php=UTF-8
+encoding//includes/get_scxingzhi.php=UTF-8
+encoding//includes/get_tihuoyx.php=UTF-8
+encoding//includes/get_xian.php=UTF-8
 encoding//includes/head.html=UTF-8
 encoding//includes/login.php=UTF-8
 encoding//includes/yanzheng.php=UTF-8
