--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -14,12 +14,17 @@ encoding//includes/error.php=UTF-8
 encoding//includes/get_area.php=UTF-8
 encoding//includes/get_city.php=UTF-8
 encoding//includes/get_huifang.php=UTF-8
+encoding//includes/get_jsxz.php=UTF-8
 encoding//includes/get_kehuname.php=UTF-8
+encoding//includes/get_khlaiyuan.php=UTF-8
+encoding//includes/get_khtuiguang.php=UTF-8
 encoding//includes/get_province.php=UTF-8
 encoding//includes/get_scname.php=UTF-8
 encoding//includes/get_scxingzhi.php=UTF-8
 encoding//includes/get_tihuoyx.php=UTF-8
+encoding//includes/get_tuoyunbu.php=UTF-8
 encoding//includes/get_xian.php=UTF-8
+encoding//includes/get_zxdangci.php=UTF-8
 encoding//includes/head.html=UTF-8
 encoding//includes/login.php=UTF-8
 encoding//includes/yanzheng.php=UTF-8
