添加修改客户信息

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,6 +1,7 @@
 eclipse.preferences.version=1
 encoding//admin/KeHuGuanLi/huifang.php=UTF-8
 encoding//admin/KeHuGuanLi/kehuinfo.php=UTF-8
+encoding//admin/KeHuGuanLi/modifyinfo.php=UTF-8
 encoding//admin/XiaoShouGuanLi/XiaoShouDan/XiaDan.php=UTF-8
 encoding//admin/XiaoShouGuanLi/XiaoShouDan/addPro.php=UTF-8
 encoding//admin/XiaoShouGuanLi/XiaoShouDan/deletePro.php=UTF-8
@@ -10,11 +11,16 @@ encoding//admin/XiaoShouGuanLi/XiaoShouDan/modifyPro.php=UTF-8
 encoding//admin/XiaoShouGuanLi/XiaoShouDan/pro.php=UTF-8
 encoding//admin/XiaoShouGuanLi/XiaoShouDan/showOrder.php=UTF-8
 encoding//includes/access.inc.php=UTF-8
+encoding//includes/add_kehu.php=UTF-8
+encoding//includes/add_tuoyunbu.php=UTF-8
 encoding//includes/error.php=UTF-8
 encoding//includes/get_area.php=UTF-8
+encoding//includes/get_baifangren.php=UTF-8
 encoding//includes/get_city.php=UTF-8
+encoding//includes/get_fuzheren.php=UTF-8
 encoding//includes/get_huifang.php=UTF-8
 encoding//includes/get_jsxz.php=UTF-8
+encoding//includes/get_kehuinfo.php=UTF-8
 encoding//includes/get_kehuname.php=UTF-8
 encoding//includes/get_khlaiyuan.php=UTF-8
 encoding//includes/get_khtuiguang.php=UTF-8
