表头固定及下载功能

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -13,6 +13,7 @@ encoding//admin/XiaoShouGuanLi/XiaoShouDan/showOrder.php=UTF-8
 encoding//includes/access.inc.php=UTF-8
 encoding//includes/add_kehu.php=UTF-8
 encoding//includes/add_tuoyunbu.php=UTF-8
+encoding//includes/download.php=UTF-8
 encoding//includes/error.php=UTF-8
 encoding//includes/get_area.php=UTF-8
 encoding//includes/get_baifangren.php=UTF-8
@@ -33,5 +34,6 @@ encoding//includes/get_xian.php=UTF-8
 encoding//includes/get_zxdangci.php=UTF-8
 encoding//includes/head.html=UTF-8
 encoding//includes/login.php=UTF-8
+encoding//includes/modify_kehuinfo.php=UTF-8
 encoding//includes/yanzheng.php=UTF-8
 encoding/index.php=UTF-8
