--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -10,6 +10,7 @@ encoding//admin/XiaoShouGuanLi/XiaoShouDan/kehu.php=UTF-8
 encoding//admin/XiaoShouGuanLi/XiaoShouDan/modifyPro.php=UTF-8
 encoding//admin/XiaoShouGuanLi/XiaoShouDan/pro.php=UTF-8
 encoding//admin/XiaoShouGuanLi/XiaoShouDan/showOrder.php=UTF-8
+encoding//admin/XiaoShouGuanLi/chanpinsale.php=UTF-8
 encoding//includes/access.inc.php=UTF-8
 encoding//includes/add_kehu.php=UTF-8
 encoding//includes/add_tuoyunbu.php=UTF-8
@@ -17,20 +18,27 @@ encoding//includes/download.php=UTF-8
 encoding//includes/error.php=UTF-8
 encoding//includes/get_area.php=UTF-8
 encoding//includes/get_baifangren.php=UTF-8
+encoding//includes/get_chanpinxiaoshou.php=UTF-8
+encoding//includes/get_chaozuorenINdd.php=UTF-8
 encoding//includes/get_city.php=UTF-8
+encoding//includes/get_fhr.php=UTF-8
 encoding//includes/get_fuzheren.php=UTF-8
+encoding//includes/get_fuzherenINkehulist.php=UTF-8
 encoding//includes/get_huifang.php=UTF-8
 encoding//includes/get_jsxz.php=UTF-8
 encoding//includes/get_kehuinfo.php=UTF-8
 encoding//includes/get_kehuname.php=UTF-8
 encoding//includes/get_khlaiyuan.php=UTF-8
 encoding//includes/get_khtuiguang.php=UTF-8
+encoding//includes/get_pingpai.php=UTF-8
+encoding//includes/get_productclass.php=UTF-8
 encoding//includes/get_province.php=UTF-8
 encoding//includes/get_scname.php=UTF-8
 encoding//includes/get_scxingzhi.php=UTF-8
 encoding//includes/get_tihuoyx.php=UTF-8
 encoding//includes/get_tuoyunbu.php=UTF-8
 encoding//includes/get_xian.php=UTF-8
+encoding//includes/get_yanse.php=UTF-8
 encoding//includes/get_zxdangci.php=UTF-8
 encoding//includes/head.html=UTF-8
 encoding//includes/login.php=UTF-8
